--- a/Landing.html
+++ b/Landing.html
@@ -16,12 +16,6 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-
     <!-- Pyscript -->
     <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> -->
 
@@ -30,11 +24,6 @@
             height: 100%;
             width: auto;
             object-fit: cover;
-        }
-
-        #icon {
-            height: 30px;
-            margin: 2px 4px;
         }
 
         .night-mode {
@@ -122,11 +111,10 @@
             <!-- <img src="Assets/Landing/background-floating-shapes.svg" class="position: absolute; width: 100%; top: 0; left: 0; opacity: 50%" alt=""> -->
         </div>
         <!-- <video class="img-fluid" src="Assets/Landing/background-vortex.mp4" style="position: absolute; z-index: -1; top: 0; left: 0; height: 100vh; width: 100%; border-radius: 0 0 15px 15px;" muted autoplay loop></video> -->
-        <img src="Assets/Thumbnails/logo3.svg" style="width: 40vh;">
-        <div class="container-fluid">
-            <div class="fakeimg" style="height: 30px;"></div>
-        </div>
-        <h1><strong>Khalid Siraj</strong></h1>
+        <img src="Assets/Thumbnails/logo3.svg" style="width: 35vh;">
+        <br>
+        <img src="Assets/Thumbnails/main-name-header.png" style="height: 270px;" alt="">
+        <!-- <h1><strong>Khalid Siraj</strong></h1> -->
         <h3>Explorer and Experimenter of Things</h3>
         <p>Musician, Engineer, Writer, Designer, Philosopher</p>
     </div>
@@ -250,7 +238,7 @@
                     <br>
                     <br>
                     <figcaption>
-                        <p>Designing a mask that for using a mouthstick and <em>sip-and-puff</em> device.</p>
+                        <p>Designing a mask for using a <em>mouthstick</em> and <em>sip-and-puff</em> device.</p>
                     </figcaption>
                 </figure>
                 <!-- </a> -->
@@ -276,7 +264,10 @@
                     </div>
                     <!-- Friends in SF -->
                     <div class="cell col-sm-4">
-                        <img class="img-fluid cell" src="Assets/Landing/jour-article-hero.png" id="cell" alt="">
+                        <a href="https://khalidjaris.github.io/Post-GradFriendMystery/" target="_blank"
+                                rel="noopener noreferrer">
+                            <img class="img-fluid cell" src="Assets/Landing/jour-article-hero.png" id="cell" alt="">
+                        </a>
                     </div>
                     <!-- H2H -->
                     <div class="image cell col-sm-4" title="Page coming soon!">
@@ -291,7 +282,7 @@
                         <div class="row">
                             <img src="Assets/Thumbnails/solidworks-red.png" class="logo" alt="">
                         </div>
-                        <p>Modeled a frame fixturing for Northwestern Baja. It is an integral component for welding the
+                        <p>I modeled a frame fixturing for Northwestern Baja. It is an integral component for welding the
                             frame of a car.</p>
                     </div>
                     <!-- Friends in SF -->
@@ -304,7 +295,7 @@
                             <img src="Assets/Thumbnails/vs_code.svg" class="logo" alt="">
                         </div>
                         <p>During my time in the Northwestern Bay Area Immersion Program, I helped write an article
-                            about making friends in San Francisco and programmed the article's webpage, which you can
+                            about making friends in San Francisco. I programmed the article's webpage, which you can
                             see <a href="https://khalidjaris.github.io/Post-GradFriendMystery/" target="_blank"
                                 rel="noopener noreferrer">here</a>.</p>
                     </div>
@@ -384,8 +375,7 @@
         <section class="container flex-wrap pt-5 col-10" id="acknowledgements">
             <h1 class="text-center">Acknowledgments</h1>
             <hr class="rounded">
-            <p>This portfolio would not have been possible without the generous feedback of my remarkable peers
-                mentors, and friends.</p>
+            <p>This portfolio would not have been possible without the generous feedback of my remarkable peers, mentors, and friends.</p>
             <p>My heartfelt thanks to <strong>Prof. Kim Hoffman, Pari Pradhan, Mark Schumacher, and Micheal
                     Miller.</strong></p><br>
 
@@ -404,8 +394,8 @@
                 <p><strong>Yousef Abdo and Mohammed Hameed,</strong> for keeping me afloat during the darkest times and
                     making them
                     among the best.</p>
-                <p><strong>Kareem AbuAlreesh,</strong> for entrusting me with your dreams and mine.</p>
-                <!-- <p><strong>Felisha Fan,</strong> for being a real friend when I most needed one.</p> -->
+                <p><strong><a href="https://www.instagram.com/kareem.abualreesh/">Kareem AbuAlreesh</a>,</strong> for entrusting me with your dreams and mine.</p>
+                <p><strong>Felisha Fan,</strong> for being a true friend when I most needed one.</p>
                 <p><strong>Pam Daniels and Jason Yuan,</strong> for teaching me how to walk the path of the
                     unconventional.</p>
                 <p><strong>Stephen Dalvet,</strong> for instilling clarity of thought in me.</p>
