--- a/TikTok.html
+++ b/TikTok.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok</title>
+  <title>TikTok AI Adassistant</title>
 
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="style.css">
