final-for-video

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Navigation Bar Start -->
     <header class="header container p-3" id="navbar">
         <div class="d-flex justify-content-between align-items-center" style="color: black !important;">
-            <a href="Landing.html">
+            <a href="index.html">
                 <div class="bg-2" style="border-radius: 15px; background-color: azure;">
                     <img src="Assets/Thumbnails/logo2-2.svg" style="padding: 10px; width: 60px; height: 60px;" alt="">
                 </div>
