--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         #art-is {
-            color: whitesmoke;
+            /* color: whitesmoke; */
             /* background-color: blanchedalmond; */
             background-image: url(Assets/Landing/art-is-background.JPG);
             background-size: cover;
@@ -87,6 +87,9 @@
                 <!-- <img src="Assets/Thumbnails/logo3.svg" alt="" style="height: 40px;"> -->
             </a>
             <ul class="nav nav-underline">
+                <li class="nav-item">
+                    <a class="nav-link" href="#featured" style="color: black !important;"><strong>Featured</strong></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#hand"
                         style="color: black !important;"><strong>Hand</strong></a>
@@ -212,7 +215,7 @@
 
             <!-- 2 -->
             <div class="col-sm-4">
-                <a class="btn hovernow" href="Tiktok.html" role="button"
+                <a class="btn hovernow" href="https://khalidjaris.github.io/TikTok.html" role="button"
                     style="height: 100%; background-color: black; color: whitesmoke;">
                     <h2>TikTok AI AdAssistant</h2>
                     <!-- <br> -->
@@ -395,7 +398,7 @@
                     making them
                     among the best.</p>
                 <p><strong><a href="https://www.instagram.com/kareem.abualreesh/">Kareem AbuAlreesh</a>,</strong> for entrusting me with your dreams and mine.</p>
-                <p><strong>Felisha Fan,</strong> for being a true friend when I most needed one.</p>
+                <p><strong>Felisha Fan,</strong> for being a true friend when I needed one most.</p>
                 <p><strong>Pam Daniels and Jason Yuan,</strong> for teaching me how to walk the path of the
                     unconventional.</p>
                 <p><strong>Stephen Dalvet,</strong> for instilling clarity of thought in me.</p>
