--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         #art-is {
             /* color: whitesmoke; */
             /* background-color: blanchedalmond; */
-            background-image: url(Assets/Landing/art-is-background.JPG);
+            background-image: url(Assets/Landing/art-is-background.jpg);
             background-size: cover;
             background-repeat: no-repeat;
         }
