"Come Back Later!" Updates

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             <h1 class="text-center">Featured Projects</h1>
             <hr class="rounded">
             <!-- 1 -->
-            <div class="col-sm-4">
-                <a class="btn hovernow" href="#" role="button" style="height: 100%; width: 100%;">
+            <div class="col-sm-4 image" title="This page is not finished yet. Come back later!">
+                <!-- <a class="btn hovernow" href="#" role="button" style="height: 100%; width: 100%;"> -->
                     <h2>Music Compositions</h2>
                     <!-- <br> -->
                     <figure>
@@ -210,7 +210,7 @@
                             </p>
                         </figcaption>
                     </figure>
-                </a>
+                <!-- </a> -->
             </div>
 
             <!-- 2 -->
