--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         #art-is {
-            /* color: whitesmoke; */
+            color: whitesmoke;
             /* background-color: blanchedalmond; */
             background-image: url(Assets/Landing/art-is-background.jpg);
             background-size: cover;
