--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
             </a>
             <ul class="nav nav-underline">
                 <li class="nav-item">
-                    <a class="nav-link" href="#featured" style="color: black !important;"><strong>Featured</strong></a>
+                    <a class="nav-link" href="index.html#featured" style="color: black !important;"><strong>Featured</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#hand"
+                    <a class="nav-link" aria-current="page" href="index.html#hand"
                         style="color: black !important;"><strong>Hand</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#heart" style="color: black !important;"><strong>Heart</strong></a>
+                    <a class="nav-link" href="index.html#heart" style="color: black !important;"><strong>Heart</strong></a>
                 </li>
                 <li class="nav-item">
                     <hr width="1" size="img-fluid">
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact" style="color: black !important;"><strong>Contact</strong></a>
+                    <a class="nav-link" href="index.html#contact" style="color: black !important;"><strong>Contact</strong></a>
                 </li>
             </ul>
         </div>
