--- a/TikTok.html
+++ b/TikTok.html
@@ -80,17 +80,17 @@
           </a>
           <ul class="nav nav-underline">
               <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#hand"
+                  <a class="nav-link" aria-current="page" href="index.html#hand"
                       style="color: whitesmoke !important;"><strong>Hand</strong></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#heart" style="color: whitesmoke !important;"><strong>Heart</strong></a>
+                  <a class="nav-link" href="index.html#heart" style="color: whitesmoke !important;"><strong>Heart</strong></a>
               </li>
               <li class="nav-item">
                   <hr width="1" size="img-fluid">
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#contact" style="color: whitesmoke !important;"><strong>Contact</strong></a>
+                  <a class="nav-link" href="index.html#contact" style="color: whitesmoke !important;"><strong>Contact</strong></a>
               </li>
           </ul>
       </div>
