--- a/TikTok.html
+++ b/TikTok.html
@@ -80,6 +80,9 @@
           </a>
           <ul class="nav nav-underline">
               <li class="nav-item">
+                <a class="nav-link" href="index.html#featured" style="color: whitesmoke !important;"><strong>Featured</strong></a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="index.html#hand"
                       style="color: whitesmoke !important;"><strong>Hand</strong></a>
               </li>
