--- a/TikTok.html
+++ b/TikTok.html
@@ -16,12 +16,6 @@
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,400&display=swap"
-    rel="stylesheet">
-
   <style>
     body {
       background-color: rgb(21, 8, 8);
@@ -298,7 +292,7 @@
       <div class="fakeimg" style="height: 50px;"></div>
     </div>
 
-    <!-- Benefits -->
+    <!-- Attributes and Benefits -->
     <div class="row flex-wrap justify-content-center">
       <div class="row">
         <div class="col-7">
@@ -317,12 +311,12 @@
   </div>
 
   <!-- Takeaways and Responsibilities -->
-  <div class="container-fluid p-3">
+  <div class="row flex-wrap justify-content-center p-3">
     <div class="fakeimg" style="height: auto;">
-      <div class="row container">
+      <div class="row justify-content-center">
 
         <!-- Takeaways -->
-        <div class="col p-5">
+        <div class="col-5 p-5">
           <h3 class="text-center">TAKEAWAYS</h3>
           <hr class="rounded">
           <ul>
@@ -341,7 +335,7 @@
         </div>
         
         <!-- Responsibilities -->
-        <div class="col p-5">
+        <div class="col-5 p-5">
           <h3 class="text-center">RESPONSIBILITIES</h3>
           <hr class="rounded">
           <li>Developing 1 of 4 initial mockups</li>
@@ -378,7 +372,7 @@
                       <!-- YouTube -->
                       <a href="https://www.youtube.com/channel/UCmlBIN46mO8T6JfsBk_LkWQ?pbjreload=102" target="_blank"
                           rel="noopener noreferrer">
-                          <img src="Assets/Thumbnails/youtube-white.png" alt="" id="icon">
+                          <img src="Assets/Thumbnails/youtube-white.png" alt="" style="height: 25px" id="icon">
                       </a>
                   </div>
                   <p>khalidsiraj2025@u.northwestern.edu</p>
