--- a/heart.html
+++ b/heart.html
@@ -347,7 +347,7 @@
         <div class="day-mode" style="height: 50px;"></div>
 
         <!-- THE FLARE -->
-        <div class="container p-3">
+        <div class="container p-3 offset-md-1">
             <div>
                 <h3>April 9th, 2023</h3>
                 <h2>THE FLARE</h2>
