--- a/index.html
+++ b/index.html
@@ -206,13 +206,15 @@
             <h1 class="text-center mt-5">Featured Projects</h1>
             <hr class="rounded">
             <!-- 1 -->
-            <div class="col-sm-4 image" title="This page is not finished yet. Come back later!">
+            <div class="col-sm-4 image">
                 <!-- <a class="btn hovernow" href="#" role="button" style="height: 100%; width: 100%;"> -->
                 <h2>Music Compositions</h2>
                 <!-- <br> -->
                 <figure>
-                    <img style="width: auto;" src="Assets/Landing/music-burdened-blessings.jpeg" class="img-fluid"
+                    <a href="https://khalidjaris.com/heart.html#music-compositions">
+                        <img style="width: auto;" src="Assets/Landing/music-burdened-blessings.jpeg" class="img-fluid"
                         alt="">
+                    </a>
                     <br>
                     <br>
                     <figcaption>
